testdata/baselines/reference/submodule/compiler/ensureNoCrashExportAssignmentDefineProperrtyPotentialMerge.errors.txt
index.js(3,23): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (1 errors) ====
    const _item = require("./namespacer");
    module.exports = 12;
    Object.defineProperty(module, "exports", { value: "oh no" });
                          ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== namespacey.js (0 errors) ====
    const A = {}
    A.bar = class Q {}
    module.exports = A;
==== namespacer.js (0 errors) ====
    const B = {}
    B.NS = require("./namespacey");
    Object.defineProperty(B, "NS", { value: "why though", writable: true });
    module.exports = B;
    